--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ header{
 }
 
 
-ul{
+.nav-list{
     display: flex;
     list-style-type: none;
     flex-direction: row;
@@ -26,7 +26,7 @@ ul{
     font-size: 20px;
 }
 
-ul li a{
+.nav-list li a{
     display: flex;
     color:#304740;
     padding-left: 50px;
@@ -37,7 +37,7 @@ ul li a{
     border-radius: 5px;
 }
 
-ul li :hover {
+.nav-list li :hover {
   background-color:#31673f40;
 }
 
@@ -45,14 +45,27 @@ ul li :hover {
     text-align: center;
     display: flex;
     justify-content: center;
-    background-image: url("/images/home-banner.jpg");
     background-size: 100%;
     padding-bottom: 100px;
     padding-top: 100px;
     width: 100%;
 }
 
-.banner h1{
+.banner-home{
+    background-image: url("/images/home-banner.jpg");
+}
+
+.banner-about{
+    background-image: url("/images/about-us-banner.jpg");
+}
+
+.banner-contact{
+    background-image: url("/images/contact-banner.jpg");
+}
+
+
+
+h1{
     display: flex;
     background-color:#00000069;
     color: white;
@@ -107,9 +120,18 @@ hr{
     margin: 40px;
 }
 
+.current{
+    border: solid;
+    border-width: 8px;
+}
+
 
 .priority-button:hover{
     opacity: 0.5;
+}
+
+.current:hover{
+    opacity:1;
 }
 
 .priority-button span{
@@ -128,6 +150,7 @@ hr{
     padding: 50px;
 }
 
+
 .about{
     display: flex;
     flex-direction: column;
@@ -141,8 +164,39 @@ hr{
     max-width: 100%;
 }
 
-.about p{
+p{
     display: flex;
     font-size: 20px;
 }
 
+.about-us-images{
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
+.tools{
+    font-weight: bold;
+    font-size: 30px;
+}
+
+
+.about-us p{
+    margin:50px;
+}
+
+.contact-form{
+    display: flex;
+    justify-content: center;
+
+    width:50%;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+    margin-top:50px;
+    margin-bottom:50px;
+    padding:50px;
+}
+
+.form-container{
+    display: flex;
+    justify-content: center;
+}
