--- a/styles.css
+++ b/styles.css
@@ -278,7 +278,7 @@ input[type=submit]:hover{
     margin-left: 60px;
     margin-right: 60px;
     margin-top: 20px;
-    max-width: 600px;
+    max-width:100%;
 }
 
 .page-image-cap{
@@ -286,4 +286,8 @@ input[type=submit]:hover{
     padding: 10px;
     margin-left: 60px;
     margin-right: 60px;
+}
+
+.page-images{
+    max-width: 600px;
 }
